# discord-ytmusic-presence

./: Cargo.toml  README.md  biome.json  bun.lockb  flake.nix  package.json  tsconfig.json
chrome_extension/: content_script.ts  manifest.json
chrome_extension/src/: content_script.ts
src/: main.rs  playerctl.rs  server.rs
