[package]
name = "rusty-playerctl-presence"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
discord-sdk = "0.3.7"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
json = "0.12.4"
mpris = "2.0.1"
serde = "1.0.204"
serde_json = "1.0.122"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
futures-util = "0.3.30"
once_cell = "1.19.0"
